chore: examples and fixes
- fix code style issues
- fix potential race condition
- use transacted sessions for source and sink
- add examples for receiver and sender Spark jobs
- update documentation